bin: Make the daily chain to use configurable (#2143)
Fix #9487

--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9487 Possibilité de surcharger la daily chain
 * BUG#9861 Utilisation de la société de l'administrateur lors de l'exécution des batchs
 * FEA#9698 Ajout de l'argument retry au batches
 * FEA#9764 Améliorer les performances des batchs en les exécutant avec l'utilisateur root
