--- a/modules/account_payment_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9855 Financial manager should be able to delete a payment
 * BUG#9762 Fix account payment process batch args
 * FEA#8233 Fix a case where the payment journal would be empty
 * BUG#9711 Fix JSON import of payment reject reason
