--- a/modules/account_payment_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9855 Les responsables financiers devraient être capable de supprimer un paiement
 * BUG#9762 Correction des arguments du batch de traitement des paiements
 * FEA#8233 Correction d'une anomalie lors de la recherche du journal de paiement
 * BUG#9711 Correction de l'import JSON des motifs de rejet de paiement
