--- a/modules/account_payment_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9851 Ne pas positionner de date de paiement sur toutes les lignes de mouvement comptable quand on crée un paiement depuis plusieurs lignes de signes inversés
 * BUG#9855 Les responsables financiers devraient être capable de supprimer un paiement
 * BUG#9762 Correction des arguments du batch de traitement des paiements
 * FEA#8233 Correction d'une anomalie lors de la recherche du journal de paiement
