commission_insurance: Add code on agent to fix JSON import (#2112)
* commission_insurance: Add code on agent to fix JSON import of 2 different agents with the same commission plan and party
Fix #9712

--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9712 Add code on agent to fix JSON import of 2 different agents with the same commission plan and party
 * FEA#9432 Use contract appliable conditions date to search for commission agents
 * BUG#9634 Initialize contract broker if there is only one possibility
 * BUG#9652 Bypass access right on commissions when deleting an invoice line
