--- a/modules/claim_document/doc/fr/CHANGELOG
+++ b/modules/claim_document/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#9856 Correction de l'ajout automatique des pièces-jointes sur les lignes de demandes de documents
+
 Version 2.0 - 2018-04-13
 * BUG#8157 Ajout dans le plan batch des demandes de documents pour les sinistres
 
