--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9857 Unlock invoice posting with an end date greater than that of the contract if prorata forces it
 * FEA#9492 Add invoice line to server context when getting move lines
 * BUG#9211 Update payment dates when unsuspending payments
 * BUG#9697 invoice against balance set number and post batches crash when there is nothing to treat
