contract_insurance_invoice_dunning: Add 'ignore dunning' sub statuses (#2153)
Fix #9859

--- a/modules/contract_insurance_invoice_dunning/locale/fr.po
+++ b/modules/contract_insurance_invoice_dunning/locale/fr.po
@@ -58,6 +58,10 @@ msgctxt "field:contract,last_posted_invoice_end:"
 msgid "Last Post Invoice End Date"
 msgstr "Date de fin de la dernière quittance émise"
 
+msgctxt "field:contract.sub_status,deactivate_dunnings:"
+msgid "Deactivate Dunnings"
+msgstr "Désactiver les mises en demeure"
+
 msgctxt "field:offered.product,dunning_procedure:"
 msgid "Dunning Procedure"
 msgstr "Procédure de relance"
@@ -77,6 +81,13 @@ msgid "Maturity date is equal to payment date if defined"
 msgstr ""
 "Date d'échéance sera initialisée avec la date de paiement. La procédure de "
 "relance dépendra de la date de paiement planifiée."
+
+msgctxt "help:contract.sub_status,deactivate_dunnings:"
+msgid ""
+"If True, dunnings linked to contracts with this sub-status will be ignored"
+msgstr ""
+"Si Vrai, les contrats avec ce sous-statuts seront ignorés lors des mises en "
+"demeure"
 
 msgctxt "model:account.dunning.create,name:"
 msgid "Dunning Creation Batch"
