--- a/modules/contract_insurance_invoice_dunning/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice_dunning/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9859 Allow to configure contract sub-statuses to ignore dunning
 * BUG#9271 Never void a contract with the block_invoicing_until field not null
 * FEA#9255 Allow to generate contract notification from dunning event
 * OTH#0000 Fix test scenario following merge 4.8
