--- a/modules/contract_insurance_invoice_dunning/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice_dunning/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9859 Permettre de configurer des sous-statuts de contrats pour lesquels les mises en demeure seront ignorées
 * BUG#9271 Ne jamais passer un contrat avec une date de blocage de quittancement en sans-effet
 * FEA#9255 Permettre de générer une notification sur un contrat lors du traitement du processus d'impayé
 * OTH#0000 Correction du scenario de test suite au merge 4.8
