claim_indemnification: allow exiting wizard without selecting a cancellation reason (#2171)
Fix #9874

--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -2058,11 +2058,11 @@ msgctxt ""
 msgid "Done"
 msgstr "Fait"
 
-msgctxt "wizard_button:claim.indemnification.cancel,cancel_reason,cancel:"
-msgid "Cancel"
-msgstr "Annuler"
-
 msgctxt ""
 "wizard_button:claim.indemnification.cancel,cancel_reason,cancel_selection:"
 msgid "Apply"
 msgstr "Appliquer"
+
+msgctxt "wizard_button:claim.indemnification.cancel,cancel_reason,end:"
+msgid "Cancel"
+msgstr "Annuler"
