--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9874 Correctif: il n'y a plus besoin de renseigner un motif d'annulation lorsqu'on souhaite annuler l'action d'annulation d'indemnisation à travers l'assistant
 * BUG#9434 Correctif: les documents requis d'un préjudice ne bloque plus l'ordonnancement d'une période d'un autre préjudice
 * BUG#9528 Autoriser l'ordennacement des indemnisations de types capitaux lors de la vérification pour ordonnancement 
 * BUG#9407 Correctif sur les périodes pour ne plus pouvoir ordonnancer en ayant un trou entre la date de début de préjudice et la première période d'indemnisation
