--- a/modules/commission_insurer/locale/fr.po
+++ b/modules/commission_insurer/locale/fr.po
@@ -6,10 +6,6 @@ msgctxt "error:account.invoice:"
 msgid "Commission Reset following unreconciliation of invoice %s"
 msgstr "Annulation de commission suite à délettrage de la quittance %s"
 
-msgctxt "error:account.invoice:"
-msgid "Premiums Received"
-msgstr "Primes reçues"
-
 msgctxt "error:account.move.line:"
 msgid "Automatic Split Move"
 msgstr "Découpage automatique"
@@ -35,9 +31,22 @@ msgctxt "error:commission:"
 msgid "An insurer notice has already been generated today for (%s)"
 msgstr "Un bordereau assureur a déja été généré aujourd'hui pour (%s)"
 
-msgctxt "error:received_premiums:"
-msgid "Received Premium"
-msgstr "Primes reçues"
+msgctxt "error:insurer:"
+msgid "Notice kind does not match insurer configuration"
+msgstr ""
+"Le type de bordereau ne correspond pas à la configuration de l'assureur"
+
+msgctxt "error:insurer:"
+msgid ""
+"You cannot generate invoices simultaneously for insurers whose group invoice"
+" configuration is different"
+msgstr ""
+"Vous ne pouvez pas générer simultanément les bordereaux d'assureurs ayant "
+"une configuration différente de regroupement des bordereaux"
+
+msgctxt "error:report.template:"
+msgid "All Insurer Invoice"
+msgstr "Bordereau Assureur Complet"
 
 msgctxt "field:account.configuration,insurer_invoice_payment_term:"
 msgid "Insurer Invoice Payment Term"
@@ -123,6 +132,10 @@ msgctxt "field:commission.invoice_principal.link,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:insurer,group_insurer_invoices:"
+msgid "Group Insurer Invoices"
+msgstr "Regrouper les bordereaux"
+
 msgctxt "help:account.configuration,insurer_invoice_payment_term:"
 msgid "Configure the insurer commission invoice payment term"
 msgstr ""
@@ -140,6 +153,14 @@ msgid "Configure the default payment journal for insurer "
 msgstr ""
 "Journal par défaut qui va être pris en compte lors de la génération des "
 "virements pour les assureurs"
+
+msgctxt "help:insurer,group_insurer_inovices:"
+msgid ""
+"If True, all insurer related invoices (premiums / claims / etc) will be "
+"grouped in one"
+msgstr ""
+"Si coché, tous les bordereaux (primes, prestations, etc) seront regroupés en"
+" en seul"
 
 msgctxt "model:account.journal,name:journal_commission_reset"
 msgid "Commission Reset Journal"
@@ -176,6 +197,14 @@ msgstr "Lignes associées"
 msgctxt "model:ir.ui.menu,name:menu_commission_create_invoice_principal"
 msgid "Create Commission Invoice Principal"
 msgstr "Générer les bordereaux assureurs"
+
+msgctxt "selection:account.invoice,business_kind:"
+msgid "All Insurer Invoices"
+msgstr "Bordereau Assureur"
+
+msgctxt "selection:commission.create_invoice_principal.ask,notice_kind:"
+msgid "All"
+msgstr "Tous"
 
 msgctxt "selection:commission.create_invoice_principal.ask,notice_kind:"
 msgid "Premiums"
