--- a/modules/commission_insurer/doc/en/CHANGELOG
+++ b/modules/commission_insurer/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9745 Allow to generate merged insurer invoices for different operations
 * BUG#9597 Allow overloading of behavior when changing plan
 * BUG#9153 Fix claim insurer invoice amount sign
 * BUG#8936 Fix imcomplete insurer notice creation
