--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9912 Fix cancel wholesale type invoice
 * BUG#9841 Update on_change dependencies following agent domain overhaul
 * BUG#9712 Add code on agent to fix JSON import of 2 different agents with the same commission plan and party
 * FEA#9432 Use contract appliable conditions date to search for commission agents
