account_per_product: fix find_insurer_agent_domain on contracts with fees (#2169)
Fix #9892

--- a/modules/account_per_product/doc/en/CHANGELOG
+++ b/modules/account_per_product/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9892 Fix invoicing for contracts with fees
 * FEA#9462 Set product on clearing moves
 * FEA#9462 Global test correction
 * FEA#9462 Module creation
