--- a/modules/account_per_product/doc/fr/CHANGELOG
+++ b/modules/account_per_product/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9892 Correction sur le quittancement des contrats qui ont des frais de dossier
 * FEA#9462 Alimentation du produit des mouvements comptables de compensation
 * FEA#9462 Correction des tests globaux
 * FEA#9462 Création du module
