--- a/modules/commission_wholesale/doc/fr/CHANGELOG
+++ b/modules/commission_wholesale/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#9906 Correction sur le quittancement des commissions
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 * FEA#6453 Ajout du type de modèle de courrier Courtier grossiste
