--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9730 Anonymize ssn in subscriptions when anonymizing a party
 * BUG#9761: Add Indu node in amount check
 * OTH#0000: Add prest IJ documentation
 * BUG#9540 Handle party search on rec_name in BPIJ
