--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9730 Anonymisation du ssn dans les inscriptions lorsqu'on anonymise un tiers
 * BUG#9761: Ajout des montants des noeuds Indu dans le calcul de la validation des montants
 * OTH#0000: Ajout d'une documentation pour prest IJ
 * BUG#9540 Gérer la recherche des BPIJ à partir du nom de la personne
