--- a/modules/health/doc/en/CHANGELOG
+++ b/modules/health/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9882 Use the field 'date' of heath party complement in order to get the right version of this object
 * BUG#9125 Properly manage the case where the contract does not yet exists in when creating a covered element
 * OTH#0000 Fix test
 
