--- a/modules/health/doc/fr/CHANGELOG
+++ b/modules/health/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9882 Utilisation du champ date du complement santé afin de récuperer la derniere version valide de cet objet
 * BUG#9125 Gestion du cas où le contrat n'existe pas encore lors de la création des éléments couverts
 * OTH#0000 Correction des tests
 
