offered: Allow manual input of contract numbers (#2193)
Fix #9942

--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -290,6 +290,10 @@ msgctxt "field:contract,last_modification:"
 msgid "Last Modification"
 msgstr "Dernière modification"
 
+msgctxt "field:contract,manual_contract_number:"
+msgid "Manual Contract Number"
+msgstr "Saisie manuelle du numéro de contrat"
+
 msgctxt "field:contract,options:"
 msgid "Options"
 msgstr "Garanties"
