--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9942 Configuration et gestion de la saisie manuelle des numéros de contrat
 * OTH#0000 Le cache des données complémentaires est indépendant du contexte
 * FEA#9453 Ajout d'une icône personnalisable sur les produits
 * BUG#9412 Gestion des données complémentaires liées de type booléen
