batch_launcher: Allow manual typing for batch parameters (#2107)
Because a lot of batches does not implement explicit arguments, we need
to allow manual entries of batch parameters in the wizard

Fix #9695

--- a/modules/batch_launcher/doc/fr/CHANGELOG
+++ b/modules/batch_launcher/doc/fr/CHANGELOG
@@ -1,6 +1,8 @@
+* BUG#9695 Ajout de la modification / saisie manuelle des paramètres de batch
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
-* FEA#0000 Module creation
+* FEA#0000 Création du module
