--- a/modules/batch_launcher/doc/en/CHANGELOG
+++ b/modules/batch_launcher/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#9695 Add modification / manual typing of batch parameters
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
