coog_core: Filter inactif action event type in order to not apply them (#2176)
Fix #9746

--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9746 Filtrer les actions par type d'évenement qui sont inactives afin de ne pas les appliquer
 * BUG#7334 Gestion des exceptions DatabaseOperationalError
 * FEA#9487 Possibilité de surcharger la daily chain
 * BUG#9861 Utilisation de la société de l'administrateur lors de l'exécution des batchs
