claim_eligibility: Add default eligibility rule (#2192)
Fix #9944

--- a/modules/claim_eligibility/doc/fr/CHANGELOG
+++ b/modules/claim_eligibility/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9944 Ajout d'une règle d'éligibilité par défaut
 * FEA#8075 Possibilité de re-déclencher le calcul d'éligibilité en re-passsant en brouillon
 
 Version 2.0 - 2018-04-13
