--- a/modules/claim_eligibility/doc/en/CHANGELOG
+++ b/modules/claim_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9944 Add default eligibility rule
 * FEA#8075 Re-trigger eligibility check when going back to draft state
 
 Version 2.0 - 2018-04-13
