--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9965 Fix net salary retrieving when a claim has multiple delivered services 
 * BUG#9846 Claim net salary calculation should take into account the salary update from gross to net case
 * OTH#0000 Fix wrong call to detect revaluation on basic salary on indemnification period calculation dates
 * FEA#9265 Handle revaluation on basic salary for group life insurance
