--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9948 Log call stack in case of asynchronous tasks failure, secure failure behavior
 * BUG#9746 Filter inactive action event type in order to not apply them
 * BUG#7334 Proper handling of DatabaseOperationalError exceptions
 * FEA#9487 Allow to override the daily chain
