--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9940 Ajout de règles d'indemnisation par défaut
 * FEA#9904  Ajout de règles de franchise par défaut dans coog
 
 Version 2.0 - 2018-04-13
