--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9940 Ajout de règles de calcul du salaire net par défaut
 * BUG#9965 Correctif sur la récupération du salaire net lorsqu'un dossier a plusieurs services délivrés
 * BUG#9846 Prise en compte du cas de la mise à jour du salaire de brut à net dans le calcul du salaire net
 * OTH#0000 Correction de la détection de la revalorisaton du traitement de base dans la méthode de calcul des dates de recalcul des périodes d'indemnisation
