--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9957 Add default standard revaluation rule with the AGIRC / ARRCO tables structures
 * FEA#9940 Add default net salary computation rules
 * BUG#9965 Fix net salary retrieving when a claim has multiple delivered services 
 * BUG#9846 Claim net salary calculation should take into account the salary update from gross to net case
