--- a/modules/analytic_account_aggregate/doc/fr/CHANGELOG
+++ b/modules/analytic_account_aggregate/doc/fr/CHANGELOG
@@ -1,2 +1,3 @@
+* OTH#0000 Correction de la relation vers les lignes d'un agrégat analytique
 * FEA#9450 Ajout de l'extraction des agrégats analytiques
 * FEA#9449 Création du module
