--- a/modules/endorsement_insurance/doc/en/CHANGELOG
+++ b/modules/endorsement_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9919 Fix crash when updating empty endorsement (endorsement contract are removed)
 * BUG#9260 Fix a next / previous bug where options on a new covered element were duplicated
 
 Version 2.0 - 2018-04-13
