--- a/modules/endorsement_insurance/doc/fr/CHANGELOG
+++ b/modules/endorsement_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9919 Création lors de la mise à jour des avenants (modification de quittancement et modification des options) si l'avenant est vide
 * BUG#9260 Correction d'un bug de navigation causant des doublons sur certaines garanties
 
 Version 2.0 - 2018-04-13
