distribution_portfolio: Fix party domain (#2212)
Fix #0000

--- a/modules/distribution_portfolio/doc/fr/CHANGELOG
+++ b/modules/distribution_portfolio/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Renforcement du domaine sur les tiers
 * BUG#9686 Le cloisonnement des données par portefeuille est optionnel
 * FEA#9186 Cloisonnement des données par portefeuille
 
