--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -350,6 +350,10 @@ msgctxt "field:report.template,process_method:"
 msgid "Process Method"
 msgstr "Méthode de traitement"
 
+msgctxt "field:report.template,pyson_condition:"
+msgid "Pyson Condition"
+msgstr "Condition pyson"
+
 msgctxt "field:report.template,rec_name:"
 msgid "Record Name"
 msgstr "Nom"
@@ -715,6 +719,16 @@ msgid ""
 msgstr ""
 "Mettre à vrai si vous voulez editer le document généré avant de l'imprimer "
 "ou de l'envoyer par mail"
+
+msgctxt "help:report.template,pyson_condition:"
+msgid ""
+"A Pyson expression to filter templates to produce for an object. If set and evaluated to True, the report will be produced. Example:\n"
+" Bool(Eval('must_be_printed'))\n"
+" where must_be_printed is a field on the object"
+msgstr ""
+"Expression Pyson pour filtrer les modèles à traiter pour un objet. Si elle est renseignée et qu'elle retourne Vrai, alors le rapport sera produit. Exemple:\n"
+" Bool(Eval('must_be_printed'))\n"
+" où 'must_be_printed' est le nom d'un champ sur l'objet"
 
 msgctxt "help:report.template,recipient_needed:"
 msgid ""
