--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,5 +1,6 @@
+* BUG#9997 Itération - Correctifs - ajout de règle
 * FEA#9940 Ajout de règles d'indemnisation par défaut
-* FEA#9904  Ajout de règles de franchise par défaut dans coog
+* FEA#9904 Ajout de règles de franchise par défaut dans coog
 
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
