--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Gestion des requêtes SQL portant sur CurrentDate pour les champs Date
 * BUG#9948 Logger la pile d'exécution en cas d'échec de tâche asynchrone, securiser le comportement en cas d'échec
 * BUG#9746 Filtrer les actions par type d'évenement qui sont inactives afin de ne pas les appliquer
 * BUG#7334 Gestion des exceptions DatabaseOperationalError
