contract_insurance: Always store the contract on a covered_element (#2201)
Fix #9928

--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -65,10 +65,6 @@ msgctxt "error:contract:"
 msgid "Invalid file format"
 msgstr "Format de fichier non valide"
 
-msgctxt "error:contract:"
-msgid "Select at least one option for %s"
-msgstr ""
-
 msgctxt "error:party.erase:"
 msgid ""
 "The party %(party)s can not be erased because it is covered by the following active contracts: \n"
@@ -90,8 +86,9 @@ msgid ""
 "The party %(party)s cannot be erased because it is covered by the following contracts which have not exceeded their shelf life: \n"
 "%(contracts)s"
 msgstr ""
-"Le tiers %(party)s ne peut être supprimé car il est couvert par les contracts résiliés n'ayant pas excédé leur durée de conservation suivants"
-"%(contracts)"
+"Le tiers %(party)s ne peut être supprimé car il est couvert par les "
+"contracts résiliés n'ayant pas excédé leur durée de conservation "
+"suivants%(contracts)"
 
 msgctxt "error:party.party:"
 msgid "Missing extra data for : %s"
@@ -189,6 +186,10 @@ msgctxt "field:contract,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:contract.covered_element,affiliated_to:"
+msgid "Affiliated To"
+msgstr "Rattaché à"
+
 msgctxt "field:contract.covered_element,all_options:"
 msgid "Options"
 msgstr "Options"
@@ -213,10 +214,6 @@ msgctxt "field:contract.covered_element,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:contract.covered_element,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
 msgctxt "field:contract.covered_element,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -237,6 +234,10 @@ msgctxt "field:contract.covered_element,current_extra_data:"
 msgid "Current Extra Data"
 msgstr "Données complémentaires courantes"
 
+msgctxt "field:contract.covered_element,current_extra_data_summary:"
+msgid "Current Extra Data Summary"
+msgstr "Résumé des données complémentaires"
+
 msgctxt "field:contract.covered_element,current_version:"
 msgid "Current Version"
 msgstr "Version Courante"
@@ -245,9 +246,17 @@ msgctxt "field:contract.covered_element,declined_options:"
 msgid "Declined Options"
 msgstr "Options déclinées"
 
+msgctxt "field:contract.covered_element,end_date:"
+msgid "End Date"
+msgstr "Date de fin de couverture"
+
 msgctxt "field:contract.covered_element,end_reason:"
 msgid "End Reason"
 msgstr "Motif de sortie"
+
+msgctxt "field:contract.covered_element,has_sub_covered_elements:"
+msgid "Has sub-covered elements"
+msgstr "Avec sous-risques"
 
 msgctxt "field:contract.covered_element,icon:"
 msgid "Icon"
@@ -269,13 +278,13 @@ msgctxt "field:contract.covered_element,item_kind:"
 msgid "Item Kind"
 msgstr "Type de Bien"
 
-msgctxt "field:contract.covered_element,main_contract:"
-msgid "Contract"
-msgstr "Contrat"
+msgctxt "field:contract.covered_element,left:"
+msgid "Left"
+msgstr "Gauche"
 
 msgctxt "field:contract.covered_element,manual_end_date:"
-msgid "End Date"
-msgstr "Date de fin"
+msgid "Manual End Date"
+msgstr "Date de fin manuelle"
 
 msgctxt "field:contract.covered_element,manual_start_date:"
 msgid "Start Date"
@@ -321,6 +330,10 @@ msgctxt "field:contract.covered_element,rec_name:"
 msgid "Record Name"
 msgstr "Nom"
 
+msgctxt "field:contract.covered_element,right:"
+msgid "Right"
+msgstr "Droite"
+
 msgctxt "field:contract.covered_element,start_date:"
 msgid "Start Date"
 msgstr "Date de début"
@@ -340,10 +353,6 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract.covered_element,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
-
-msgctxt "field:contract.covered_element,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:contract.covered_element-party,covered_element:"
 msgid "Covered Element"
@@ -393,6 +402,10 @@ msgctxt "field:contract.covered_element.version,covered_element:"
 msgid "Covered Element"
 msgstr "Risque Couvert"
 
+msgctxt "field:contract.covered_element.version,covered_parent:"
+msgid "Covered Parent"
+msgstr "Risque parent"
+
 msgctxt "field:contract.covered_element.version,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -410,8 +423,8 @@ msgid "Extra Data"
 msgstr "Données Complémentaires"
 
 msgctxt "field:contract.covered_element.version,extra_data_as_string:"
-msgid "Extra Data"
-msgstr "Données Complémentaires"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
 
 msgctxt "field:contract.covered_element.version,id:"
 msgid "ID"
@@ -596,10 +609,6 @@ msgstr "Exclusions"
 msgctxt "field:contract.option,exclusions_allowed:"
 msgid "Exclusions allowed"
 msgstr "Exclusions autorisées"
-
-msgctxt "field:contract.option,extra_data_summary:"
-msgid "Extra Data Summary"
-msgstr "Résumé des données complémentaires"
 
 msgctxt "field:contract.option,extra_premium_discounts:"
 msgid "Discounts"
@@ -882,9 +891,21 @@ msgctxt "field:party.party,extra_data:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
 
+msgctxt "field:party.party,extra_data_summary:"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
+
 msgctxt "field:report_production.contract_request.create,id:"
 msgid "ID"
 msgstr "Identifiant"
+
+msgctxt "help:contract.covered_element,affiliated_to:"
+msgid ""
+"The company which is the closest (in terms of parent covered elements / "
+"subscribers) to the covered"
+msgstr ""
+"La société la plus proche (en termes de relations entre éléments couverts / "
+"souscripteur) du risque"
 
 msgctxt "model:contract,name:"
 msgid "Contract"
@@ -1068,7 +1089,7 @@ msgstr "Documents du contrat"
 
 msgctxt "view:contract.covered_element.version:"
 msgid "Versions"
-msgstr "Versions"
+msgstr "Rattaché à"
 
 msgctxt "view:contract.covered_element:"
 msgid "Covered Relations"
