--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9928 Manage covered elements as a tree
 * BUG#9690 Fix brouillard template possible crash if there is no decision on the underwriting
 * BUG#9127 Remove readonly status for sub covered elements
 * FEA#8832 Replace 'hpaned' position attribute with 'group'
