contract_group: Add company hierarchy (#2215)
Fix #9315

--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9315 Display legal entity hierarchy with their contracts
 * BUG#9360 Display contract exit date on enrollment
 
 Version 2.0 - 2018-04-13
