--- a/modules/contract_group/doc/fr/CHANGELOG
+++ b/modules/contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9315 Ajouter l'affichage de la hiérarchie des sociétés avec leurs contrats
 * BUG#9360 afficher la date de sortie du contrat sur l'affiliation
 
 Version 2.0 - 2018-04-13
