global_tests: Group life claim creation (#2223)
Fix #0000

--- a/modules/global_tests/doc/fr/CHANGELOG
+++ b/modules/global_tests/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Configuration réelle et sinistres incapacité collective
 * OTH#0000 Création d'un sinistre prévoyance
 * OTH#0000 Ajouter la gestion des documents requis en souscription
 * OTH#0000 Ne pas restaurer une base par défaut
