--- a/modules/global_tests/doc/en/CHANGELOG
+++ b/modules/global_tests/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Real life configuration and claim for group incapacity
 * OTH#0000 Create a life claim
 * OTH#0000 Add document requests management when subscribing
 * OTH#0000 Do not restore a database by default
