--- a/modules/account_per_product/doc/en/CHANGELOG
+++ b/modules/account_per_product/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10014 Fix product not found for insurer
 * FEA#9893 Add warning when mixing on a product insurers that are already used on other products
 * BUG#9892 Fix invoicing for contracts with fees
 * FEA#9462 Set product on clearing moves
